Implemented exported function cart_pay,rent_pay and parking_pay and dummy implementation for pay
