# config/api.yml
@@ -9,6 +9,46 @@ produces:
   - application/json
 basePath: "/api"
 paths:
+  /pay/cart_pay:
+    post:
+      tags: [ Transaction ]
+      operationId: app.cart_pay
+      summary: pay from cart exported function
+      parameters:
+        - $ref: '#/parameters/amount_body'
+      responses:
+        200:
+          description: return transactionId
+        400:
+          description: bad request
+
+  /pay/rent_pay:
+    post:
+      tags: [ Transaction ]
+      operationId: app.rent_pay
+      summary: pay for renting product exported function
+      parameters:
+        - $ref: '#/parameters/amount_body'
+      responses:
+        200:
+          description: return transactionId
+        400:
+          description: bad request
+
+  /pay/parking_pay:
+    post:
+      tags: [ Transaction ]
+      operationId: app.parking_pay
+      summary: pay for parking exported function
+      parameters:
+        - $ref: '#/parameters/amount_body'
+      responses:
+        200:
+          description: return transactionId
+        400:
+          description: bad request
+
+
   /users-payments-methods:
     post:
       tags: [ UserPayments ]
@@ -162,6 +202,16 @@ parameters:
     type: string
     required: true
 
+  amount_body:
+    name: transaction_amount
+    description: amount for paying
+    in: body
+    schema:
+      required:
+        - amount
+      properties:
+        amount:
+          type: number
 
   id:
     name: id
@@ -195,11 +245,10 @@ parameters:
     in: body
     schema:
       required:
-        - id
         - user_id
       properties:
         id:
-          type: number
+          type: integer
         user_id:
           type: string
         amount:
